--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Texture/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn")
 current_scene="res://Scenes/PlayerScene.tscn"
-center_split_offset=0
+center_split_offset=-371
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=4
 
 [ScriptEditor]
 
