Add pulling objects to the black hole

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,32 +13,32 @@ dock_split_2=115
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=270
-dock_hsplit_3=-372
+dock_hsplit_3=-744
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Texture/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Food.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn")
-current_scene="res://Scenes/PlayerScene.tscn"
+open_scenes=PackedStringArray("res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/Food.tscn")
+current_scene="res://Scenes/Food.tscn"
 center_split_offset=-371
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=4
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/PlayerScript.gd"]
 selected_script="res://Scripts/PlayerScript.gd"
-open_help=["Input"]
+open_help=["CollisionShape2D", "Input"]
 script_split_offset=70
 list_split_offset=0
 
