--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/Food.tscn")
-current_scene="res://Scenes/Food.tscn"
+current_scene="res://Scenes/PlayerScene.tscn"
 center_split_offset=-371
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
