Add random food spawning

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -28,7 +28,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/Food.tscn")
-current_scene="res://Scenes/PlayerScene.tscn"
+current_scene="res://Scenes/LevelScene.tscn"
 center_split_offset=-371
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,9 +36,9 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/PlayerScript.gd"]
-selected_script="res://Scripts/PlayerScript.gd"
-open_help=["CollisionShape2D", "Input"]
+open_scripts=["res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
+selected_script="res://Scenes/LevelScene.gd"
+open_help=["CollisionShape2D", "Input", "Node"]
 script_split_offset=70
 list_split_offset=0
 
