--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
-selected_script="res://Scenes/LevelScene.gd"
+selected_script="res://Scripts/PlayerScript.gd"
 open_help=["CollisionShape2D", "Input", "Node"]
 script_split_offset=70
 list_split_offset=0
