--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
 selected_script="res://Scripts/PlayerScript.gd"
-open_help=["CollisionShape2D", "Input", "Node"]
+open_help=["@GlobalScope", "CollisionShape2D", "Input", "Node"]
 script_split_offset=70
 list_split_offset=0
 
