--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -12,8 +12,8 @@ dock_floating={}
 dock_split_2=115
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
-dock_hsplit_3=-744
+dock_hsplit_2=291
+dock_hsplit_3=-224
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/Food.tscn")
-current_scene="res://Scenes/LevelScene.tscn"
-center_split_offset=-371
+current_scene="res://Scenes/Food.tscn"
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
 selected_script="res://Scripts/PlayerScript.gd"
-open_help=["@GlobalScope", "CollisionShape2D", "Input", "Node"]
+open_help=["@GlobalScope", "CollisionShape2D", "Input", "Node", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 
