--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
-selected_script="res://Scripts/PlayerScript.gd"
+open_scripts=["res://Scenes/Food.gd", "res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
+selected_script="res://Scenes/Food.gd"
 open_help=["@GlobalScope", "CollisionShape2D", "Input", "Node", "Vector2"]
 script_split_offset=70
 list_split_offset=0
