--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,14 +13,14 @@ dock_split_2=115
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=291
-dock_hsplit_3=-224
+dock_hsplit_3=-448
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/Food.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Texture/zinger.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Resources/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -36,7 +36,7 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Food.gd", "res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
+open_scripts=["res://Scenes/Food.gd", "res://Resources/FoodResource.gd", "res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
 selected_script="res://Scenes/Food.gd"
 open_help=["@GlobalScope", "CollisionShape2D", "Input", "Node", "Vector2"]
 script_split_offset=70
