--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,7 @@
-list=Array[Dictionary]([])
+list=Array[Dictionary]([{
+"base": &"Resource",
+"class": &"FoodResource",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Resources/FoodResource.gd"
+}])
