Add food spawn limit

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -19,6 +19,7 @@ Camera2D:scale=true
 StaticBody2D:scale=true
 Area2D:scale=true
 MultiNodeEdit:scale=true
+EditorDebuggerRemoteObject:scale=true
 
 [dialog_bounds]
 
@@ -41,3 +42,7 @@ snap_mode=0
 [script_setup]
 
 last_selected_language="GDScript"
+
+[scripts_panel]
+
+show_scripts_panel=true
