--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Resources/ChickenNugget4.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://Texture/arrow.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Resources/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/Food.tscn")
 current_scene="res://Scenes/LevelScene.tscn"
-center_split_offset=-530
+center_split_offset=-325
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Scenes/Food.gd", "res://Resources/FoodResource.gd", "res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
 selected_script="res://Scenes/LevelScene.gd"
-open_help=["@GlobalScope", "CollisionShape2D", "Input", "Node", "Vector2"]
+open_help=["@GlobalScope", "Array", "CollisionShape2D", "Input", "Node", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 
@@ -56,4 +56,4 @@ log_filter_1=true
 log_filter_3=true
 log_filter_4=true
 collapse=true
-show_search=true
+show_search=false
