--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 33,
-"scroll_position": 0.0,
-"selection": false,
+"row": 16,
+"scroll_position": 9.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 16,
+"selection_to_column": 21,
+"selection_to_line": 16,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,11 +21,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 5,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 37,
-"scroll_position": 18.0,
+"row": 27,
+"scroll_position": 1.66667,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
