--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 37,
 "scroll_position": 9.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 16,
-"selection_to_column": 21,
-"selection_to_line": 16,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 5,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 1.66667,
+"row": 63,
+"scroll_position": 40.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,10 +45,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
+"row": 4,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
