--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,15 +19,15 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Texture/flowerGrassTexture.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Resources/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/UiScene.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Scenes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/Food.tscn")
+open_scenes=PackedStringArray("res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/UiScene.tscn")
 current_scene="res://Scenes/LevelScene.tscn"
 center_split_offset=-325
 selected_default_debugger_tab_idx=0
@@ -38,7 +38,7 @@ selected_bottom_panel_item=0
 
 open_scripts=["res://Scenes/Food.gd", "res://Resources/FoodResource.gd", "res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
 selected_script="res://Scenes/LevelScene.gd"
-open_help=["@GlobalScope", "Array", "CollisionShape2D", "Input", "Node", "Vector2"]
+open_help=["@GlobalScope", "Array", "Camera2D", "CollisionShape2D", "Input", "Node", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 
