--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,16 +19,16 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Resources/Levels/Level1/FoodResources/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Scenes/", "res://Resources/", "res://Resources/Levels/", "res://Resources/Levels/Level1/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/LevelScene.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Scenes/", "res://Resources/Levels/", "res://Resources/Levels/Level1/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/PlayerScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn")
-current_scene="res://Scenes/PlayerScene.tscn"
+open_scenes=PackedStringArray("res://Scenes/PlayerScene.tscn", "res://Scenes/UiScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn")
+current_scene="res://Scenes/LevelScene.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -36,8 +36,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Food.gd", "res://Resources/Levels/Level1/FoodResources/FoodResource.gd", "res://Scenes/LevelScene.gd", "res://Scripts/MenuScript.gd", "res://Scripts/PlayerScript.gd"]
-selected_script="res://Scripts/PlayerScript.gd"
+open_scripts=["res://Scenes/Food.gd", "res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
+selected_script="res://Scenes/LevelScene.gd"
 open_help=["@GlobalScope", "Array", "Camera2D", "CollisionShape2D", "Input", "Node", "Vector2"]
 script_split_offset=70
 list_split_offset=0
