Work with parallax background

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -2,6 +2,7 @@
 
 executable_path="C:/Users/Maciej/AppData/Local/Temp/0c102c41-b530-49b9-9e51-04e130cde633_Godot_v4.2.1-stable_win64.exe.zip.633/Godot_v4.2.1-stable_win64.exe"
 use_advanced_connections=false
+show_all_nodes_for_node_selection=false
 
 [debug_options]
 
@@ -23,7 +24,7 @@ EditorDebuggerRemoteObject:scale=true
 ParallaxBackground:scroll_base_scale=true
 ParallaxBackground:scale=true
 ParallaxLayer:motion_scale=false
-ParallaxLayer:scale=true
+ParallaxLayer:scale=false
 Control:scale=true
 Label:scale=true
 Panel:scale=true
@@ -45,7 +46,7 @@ scripts=["Vector2", "Node", "Input", "CollisionShape2D", "Camera2D", "Array", "@
 
 snap_step=Vector2(8, 8)
 snap_separation=Vector2(0, 0)
-snap_mode=0
+snap_mode=2
 
 [script_setup]
 
@@ -54,3 +55,7 @@ last_selected_language="GDScript"
 [scripts_panel]
 
 show_scripts_panel=true
+
+[2d_editor]
+
+theme_preview=0
