--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 12,
-"selection_from_line": 7,
-"selection_to_column": 17,
-"selection_to_line": 7,
+"row": 14,
+"scroll_position": 3.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -21,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 15.0,
+"row": 2,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,15 +31,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 28,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 14,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 28,
-"selection_from_line": 12,
-"selection_to_column": 27,
-"selection_to_line": 13,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
