--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -31,14 +31,14 @@ open_scenes=PackedStringArray("res://Scenes/PlayerScene.tscn", "res://Scenes/UiS
 current_scene="res://Scenes/LevelScene.tscn"
 center_split_offset=-288
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scenes/Food.gd", "res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
-selected_script="res://Scripts/PlayerScript.gd"
-open_help=["@GlobalScope", "Array", "Camera2D", "CollisionShape2D", "Input", "Node", "Vector2"]
+selected_script="res://Scenes/LevelScene.gd"
+open_help=["@GlobalScope", "Array", "Camera2D", "CollisionShape2D", "Input", "Node", "Sprite2D", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 
