--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Texture/grassTexture.png")
+dock_filesystem_selected_paths=PackedStringArray("res://Texture/blackhole.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Scenes/", "res://Resources/Levels/", "res://Resources/Levels/Level1/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Scenes/PlayerScene.tscn", "res://Scenes/UiScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn")
 current_scene="res://Scenes/LevelScene.tscn"
-center_split_offset=-586
+center_split_offset=-252
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
 selected_bottom_panel_item=0
