--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Texture/blackhole.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Scenes/", "res://Resources/Levels/", "res://Resources/Levels/Level1/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/FoodScript.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scenes/", "res://Resources/", "res://Resources/Levels/", "res://Resources/Levels/Level1/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,15 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/PlayerScene.tscn", "res://Scenes/UiScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn")
-current_scene="res://Scenes/LevelScene.tscn"
+current_scene="res://Scenes/Food.tscn"
 center_split_offset=-252
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_main_editor_idx=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scenes/Food.gd", "res://Scenes/LevelScene.gd", "res://Scripts/PlayerScript.gd"]
-selected_script="res://Scenes/LevelScene.gd"
+open_scripts=["res://Scripts/FoodScript.gd", "res://Resources/FoodResource.gd", "res://Scripts/LevelScene.gd", "res://Scripts/MenuScript.gd", "res://Scripts/PlayerScript.gd"]
+selected_script="res://Scripts/FoodScript.gd"
 open_help=["@GlobalScope", "Array", "Camera2D", "CollisionShape2D", "Input", "Node", "Sprite2D", "Vector2"]
 script_split_offset=70
 list_split_offset=0
