--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -13,7 +13,7 @@ dock_split_2=115
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=291
-dock_hsplit_3=-448
+dock_hsplit_3=-818
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -27,9 +27,9 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn")
+open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn")
 current_scene="res://Scenes/MenuScene.tscn"
-center_split_offset=-699
+center_split_offset=-752
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
 
