--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Resources/Theme/GameTheme.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://Scenes/LevelScene.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Texture/UI/Buttons/", "res://Scenes/", "res://Resources/", "res://Resources/Theme/", "res://Resources/Levels/Level1/", "res://Resources/Font/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,17 +27,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn")
+open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/SceneTransition.tscn")
 current_scene="res://Scenes/MenuScene.tscn"
-center_split_offset=-752
+center_split_offset=-395
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://Resources/FoodResource.gd", "res://Scripts/FoodScript.gd", "res://Scripts/LevelScene.gd", "res://Scripts/MenuScript.gd", "res://Scripts/PlayerScript.gd"]
-selected_script="res://Scripts/MenuScript.gd"
-open_help=["@GlobalScope", "Array", "Camera2D", "CollisionShape2D", "GridContainer", "Input", "Node", "Sprite2D", "StyleBox", "Vector2"]
+open_scripts=["res://Resources/FoodResource.gd", "res://Scripts/FoodScript.gd", "res://Scripts/LevelScene.gd", "res://Scripts/MenuScript.gd", "res://Scripts/PlayButtonScript.gd", "res://Scripts/PlayerScript.gd", "res://Scripts/SceneTransitionScript.gd"]
+selected_script="res://Scripts/SceneTransitionScript.gd"
+open_help=["@GlobalScope", "Array", "BaseButton", "Button", "Camera2D", "CollisionShape2D", "GridContainer", "Input", "Node", "Object", "Sprite2D", "StyleBox", "Vector2"]
 script_split_offset=70
 list_split_offset=0
 
