--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scenes/LevelScene.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/", "res://Texture/UI/Buttons/", "res://Scenes/", "res://Resources/", "res://Resources/Theme/", "res://Resources/Levels/Level1/", "res://Resources/Font/")
+dock_filesystem_selected_paths=PackedStringArray("res://Resources/Maps/Map1/MapResource1.tres")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Texture/UI/Buttons/", "res://Resources/", "res://Resources/Maps/", "res://Resources/Maps/Map1/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -28,16 +28,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/SceneTransition.tscn")
-current_scene="res://Scenes/MenuScene.tscn"
+current_scene="res://Scenes/LevelScene.tscn"
 center_split_offset=-395
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Resources/FoodResource.gd", "res://Scripts/FoodScript.gd", "res://Scripts/LevelScene.gd", "res://Scripts/MenuScript.gd", "res://Scripts/PlayButtonScript.gd", "res://Scripts/PlayerScript.gd", "res://Scripts/SceneTransitionScript.gd"]
-selected_script="res://Scripts/SceneTransitionScript.gd"
+open_scripts=["res://Resources/FoodResource.gd", "res://Scripts/FoodScript.gd", "res://Scripts/LevelScene.gd", "res://Resources/Maps/MapResource.gd", "res://Scripts/MenuScript.gd", "res://Scripts/PlayButtonScript.gd", "res://Scripts/PlayerScript.gd", "res://Scripts/SceneTransitionScript.gd"]
+selected_script="res://Resources/Maps/MapResource.gd"
 open_help=["@GlobalScope", "Array", "BaseButton", "Button", "Camera2D", "CollisionShape2D", "GridContainer", "Input", "Node", "Object", "Sprite2D", "StyleBox", "Vector2"]
 script_split_offset=70
 list_split_offset=0
