--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -4,4 +4,10 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://Resources/FoodResource.gd"
+}, {
+"base": &"Resource",
+"class": &"MapResource",
+"icon": "",
+"language": &"GDScript",
+"path": "res://Resources/Maps/MapResource.gd"
 }])
