Init blackhole effect

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -13,7 +13,7 @@ dock_split_2=115
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=291
-dock_hsplit_3=-565
+dock_hsplit_3=-706
 dock_hsplit_4=0
 dock_filesystem_split=0
 dock_filesystem_display_mode=0
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn", "res://Scenes/PlayerScene.tscn", "res://Scenes/SceneTransition.tscn")
+open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn", "res://Scenes/SceneTransition.tscn", "res://Scenes/PlayerScene.tscn")
 current_scene="res://Scenes/PlayerScene.tscn"
 center_split_offset=-395
 selected_default_debugger_tab_idx=0
@@ -55,5 +55,5 @@ log_filter_2=true
 log_filter_1=true
 log_filter_3=true
 log_filter_4=true
-collapse=true
+collapse=false
 show_search=false
