--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -36,10 +36,11 @@ TextureButton:scale=true
 PanelContainer:scale=true
 ColorRect:scale=true
 GPUParticles2D:scale=true
+BackBufferCopy:scale=true
 
 [dialog_bounds]
 
-create_new_node=Rect2(2510, 741, 900, 700)
+create_new_node=Rect2(2510, 741, 900, 695)
 editor_settings=Rect2(2510, 741, 900, 700)
 project_settings=Rect2(2510, 741, 900, 700)
 search_help=Rect2(2320, 731, 1280, 720)
@@ -73,4 +74,9 @@ advanced_mode=true
 
 [color_picker]
 
-recent_presets=PackedColorArray(0, 0, 0, 1, 0, 0, 0.890196, 1, 0.121569, 0.2, 0.905882, 1, 1, 1, 1, 0.580392, 1, 1, 1, 0.6, 1, 1, 1, 0, 1, 1, 1, 1)
+recent_presets=PackedColorArray(0, 0, 0.890196, 1, 0.121569, 0.2, 0.905882, 1, 1, 1, 1, 0.580392, 1, 1, 1, 0.6, 1, 1, 1, 0, 1, 1, 1, 1, 0.130585, 0.311999, 0.473965, 1, 0.14889, 0.307545, 0.479693, 1, 0.172549, 0.172549, 0.172549, 1)
+
+[shader_setup]
+
+last_selected_mode=1
+last_selected_language="Shader"
