--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Scenes/UiScene.tscn", "res://Scenes/MenuScene.tscn", "res://Scenes/Food.tscn", "res://Scenes/LevelScene.tscn", "res://Scenes/SceneTransition.tscn", "res://Scenes/PlayerScene.tscn")
-current_scene="res://Scenes/PlayerScene.tscn"
+current_scene="res://Scenes/LevelScene.tscn"
 center_split_offset=-395
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
@@ -44,9 +44,9 @@ list_split_offset=0
 
 [ShaderEditor]
 
-open_shaders=[]
-split_offset=0
-selected_shader=""
+open_shaders=["res://Resources/Shaders/BlackholeShader.gdshader"]
+split_offset=260
+selected_shader="res://Resources/Shaders/BlackholeShader.gdshader"
 
 [editor_log]
 
