--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,16 +3,12 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 21,
-"selection_to_column": 13,
-"selection_to_line": 21,
+"scroll_position": 6.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
